--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rlp",
-  "version": "2.2.5",
-  "description": "Recursive Length Prefix Encoding Module",
+  "name": "lean-rlp",
+  "version": "2.2.6",
+  "description": "Fork of RLP without deps with browser support (Recursive Length Prefix)",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
@@ -49,9 +49,7 @@
   "bugs": {
     "url": "https://github.com/ethereumjs/rlp/issues"
   },
-  "dependencies": {
-    "bn.js": "^4.11.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@ethereumjs/config-nyc": "^1.0.0",
     "@ethereumjs/config-prettier": "^1.0.1",
