--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "lean-rlp",
+  "name": "micro-rlp",
   "version": "2.2.7",
-  "description": "Fork of RLP without deps with browser support (Recursive Length Prefix)",
+  "description": "Better RLP: 0 deps + with browser support (Recursive Length Prefix)",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
@@ -31,7 +31,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ethereumjs/rlp.git"
+    "url": "https://github.com/paulmillr/micro-rlp.git"
   },
   "keywords": [
     "rlp",
